include holden karau tests